<resources>
    <string name="app_name">KITApp</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_login">Anmelden</string>
    <string name="action_home">Startseite</string>
    <string name="action_favorites">Favoriten</string>
    <string name="action_search">Suche</string>
    <string name="action_news">News</string>
    <string name="action_kita_details">Details</string>
    <string name="action_register">Registrieren</string>
    <string name="action_comment">Bewertung</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="main_activity_title">STARTSEITE</string>
    <string name="login_activity_title">LOGIN</string>
    <string name="search_activity_title">SUCHE</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="action_kita_detail">KITA Detail</string>
    <string name="buttonSuche">Suchen</string>
    <string name="main_activity_location_field_label">Suchort/Standort</string>
    <string name="title_activity_kita_details">KitaDetailsActivity</string>
    <string name="title_activity_result">Ergebnisse</string>

    <!-- Placeholder String -->
    <string name="placeHolderString">PLACEHOLDER</string>

    <!-- Toasts -->
    <string name="noKitasFound">0 Kitas gefunden</string>
    <string name="noKitaFound">Kita wurde nicht gefunden</string>
    <string name="notLoggedIn">Sie sind nicht eingelogged</string>

    <!-- Button -->
    <string name="buttonSend">Senden</string>
    <string name="buttonSearch">Suchen</string>

    <!-- Result Strings -->
    <!-- Toogle Button -->
    <string name="resultToggleButtonList">Liste</string>
    <string name="resultToggleButtonListValue">0</string>
    <string name="resultToggleButtonMap">Karte</string>
    <string name="resultToggleButtonMapValue">1</string>
    <string name="about">ca</string>

    <!-- Search Strings -->
    <!-- City -->
    <string name="searchCity">Stadt/Standort</string>
    <!-- Circuit -->
    <string name="searchCircuit">Umkreis in km</string>
    <string name="searchTextViewCircuite">km</string>
    <!-- Age -->
    <string name="searchAge">Alter des Kindes</string>
    <string name="searchAgeButtonValue1">0,1</string>
    <string name="searchAgeButtonText1">0-1</string>
    <string name="searchAgeButtonValue2">1,3</string>
    <string name="searchAgeButtonText2">1-3</string>
    <string name="searchAgeButtonValue3">3,99</string>
    <string name="searchAgeButtonText3">3+</string>
    <!-- Cost -->
    <string name="searchCost">Kosten</string>
    <string name="searchCostButtonValue1">200</string>
    <string name="searchCostButtonText1">weniger 200€</string>
    <string name="searchCostButtonValue2">350</string>
    <string name="searchCostButtonText2">weniger 350€</string>
    <string name="searchCostButtonValue3">0</string>
    <string name="searchCostButtonText3">egal</string>
    <!-- Open -->
    <string name="searchOpen">Öffnungszeiten</string>
    <string name="searchOpenButtonValue1">Halbtags</string>
    <string name="searchOpenButtonValue2">Verlängert</string>
    <string name="searchOpenButtonValue3">Ganztags</string>
    <!-- Evaluation -->
    <string name="searchEvaluation">Bewertung</string>
    <!-- Size -->
    <string name="searchSize">Anzahl der Kinder pro Gruppe</string>
    <string name="searchSizeButtonValue1">10</string>
    <string name="searchSizeButtonText1">bis 10</string>
    <string name="searchSizeButtonValue2">15</string>
    <string name="searchSizeButtonText2">bis 15</string>
    <string name="searchSizeButtonValue3">25</string>
    <string name="searchSizeButtonText3">bis 25</string>
    <!-- Closing -->
    <string name="searchClosing">Anzahl der Schließtage pro Jahr</string>
    <string name="searchClosingButtonValue1">10</string>
    <string name="searchClosingButtonText1">weniger 10</string>
    <string name="searchClosingButtonValue2">20</string>
    <string name="searchClosingButtonText2">weniger 20</string>


    <!-- Kita Details Strings -->
    <string name="kitaDetailsKitaName">Kita Regenbogen</string>

    <string name="kitaDetailsAddress">Adresse</string>
    <string name="kitaDetailsAddressData">76841 Karlsruhe \nBlumenstraße 23 \n0721 / 164823 \nregenbogenkita@gmail.com</string>

    <string name="kitaDetailsEvaluation">Bewertung</string>

    <string name="kitaDetailsCosts">Kosten</string>
    <string name="kitaDetailsCostsData">170 € pro Monat</string>

    <string name="kitaDetailsOpen">Öffnungszeiten</string>
    <string name="kitaDetailsOpenData">Mo 7:00 Uhr - 14:00 Uhr \nDi 7:00 Uhr - 14:00 Uhr \nMi 7:00 Uhr - 14:00 Uhr \nDo 7:00 Uhr - 14:00 Uhr \nFr 7:00 Uhr - 14:00 Uhr \n</string>

    <string name="kitaDetailsManagement">Leitung</string>
    <string name="kitaDetailsManagementData">Frau Streng</string>

    <string name="kitaDetailsConfession">Konfession</string>
    <string name="kitaDetailsConfessionData">Katholisch</string>

    <string name="kitaDetailsAge">Alter</string>
    <string name="kitaDetailsAgeData">3 - 14 Jahre</string>

    <string name="kitaDetailsAbout">Beschreibung</string>
    <string name="kitaDetailsAboutData">Mit Kinder leben und lernen: Kindertagesstätte mit allen Altersklassen von 3 bis 14 Jahren. \n"Erkläre mir und ich werde vergessen, zeige mir und ich werde mit erinnern, beteilige mich und ich verstehen."</string>

    <string name="kitaDetailsComments">Kommentare</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_write_comment">WriteCommentActivity</string>

    <string name="kitaDetailsButtonNews">News</string>
    <string name="kitaDetailsButtonEvaluate">KiTa bewerten</string>

    <!-- Login Strings -->
    <string name="loginAccount">Noch kein Benutzerkonto?</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="loginButtonFacebook">Login mit facebook</string>
    <string name="loginButtonRegister">Registrieren</string>
    <string name="loginButtonLogin">Login</string>
    <string name="loginHintPassword">Passwort</string>
    <string name="loginHintEmail">Email</string>

    <!-- News Strings -->
    <string name="newsKitaText">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</string>
    <string name="newsAuthor1">Kita Regenbogen</string>
    <string name="newsAuthor2">Kita Sonnenschein</string>
    <string name="newsAuthor3">Kita Villa Kunterbunt</string>
    <string name="newsAuthor4">Kita Katholischer Kindergarten Durlach</string>

    <!-- Main Strings -->
    <string name="mainHintLocation">Stadt/Standort</string>

    <!-- Register Strings -->
    <string name="registerHintEmail">Email</string>
    <string name="registerHintName">Name</string>
    <string name="registerHintPassword">Passwort</string>
    <string name="registerHintPasswordrepeat">Passwort wiederholen</string>
    <string name="registerButtonRegister">Registrieren</string>

</resources>
