<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="kitapp.hska.de.kitapp.ResultActivity">
    <item android:id="@+id/action_login" android:title="@string/action_login"
        android:orderInCategory="100" app:showAsAction="collapseActionView" />
    <item android:id="@+id/action_home" android:title="@string/action_home"
        android:orderInCategory="100" app:showAsAction="collapseActionView"/>
    <item android:id="@+id/action_favorites" android:title="@string/action_favorites"
        android:orderInCategory="100" app:showAsAction="collapseActionView"/>
    <item android:id="@+id/action_search" android:title="@string/action_search"
        android:orderInCategory="100" app:showAsAction="collapseActionView"/>
    <item android:id="@+id/action_news" android:title="@string/action_news"
        android:orderInCategory="100" app:showAsAction="collapseActionView"/>
</menu>
