<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="kitapp.hska.de.kitapp.SearchActivity">
    <item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:title="@string/action_login"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/action_home"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="100"
        android:title="@string/action_favorites"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/action_news"
        android:orderInCategory="100"
        android:title="@string/action_news"
        app:showAsAction="collapseActionView" />
</menu>
