<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="kitapp.hska.de.kitapp.RegisterActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    style="@style/FontBGColor.White"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/FontBGColor.White">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:id="@+id/registerImageViewLogo"
            android:cropToPadding="false"
            android:focusable="false"
            style="@style/FontBGColor.White"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/FontBGColor.White">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/registerEditTextEmail"
            android:hint="@string/registerHintEmail"
            style="@style/editTextHint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/registerEditTextName"
            android:hint="@string/registerHintName"
            style="@style/editTextHint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/registerEditTextPassword"
            android:hint="@string/registerHintPassword"
            style="@style/editTextHint"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/registerEditTextPasswordRepeat"
            android:hint="@string/registerHintPasswordrepeat"
            style="@style/editTextHint"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10sp"
        style="@style/FontBGColor.White">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerButtonRegister"
            android:id="@+id/registerButtonRegister"
            style="@style/button"
            android:background="#91d187"
            android:textAllCaps="false"/>
    </LinearLayout>


</LinearLayout>
