<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/FontBGColor.White"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="kitapp.hska.de.kitapp.LoginActivity">


    <LinearLayout
        android:id="@+id/imageViewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            style="@style/FontBGColor.White"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:cropToPadding="false"
            android:focusable="false"
            android:src="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/editTextLoginLayout"
        style="@style/FontBGColor.White"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageViewLayout"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextLoginEmail"
            style="@style/editTextHint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/loginHintEmail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextLoginPassword"
            style="@style/editTextHint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:ems="10"
            android:hint="@string/loginHintPassword"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loginButtonLayout"
        style="@style/FontBGColor.White"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/registerButtonsLayout"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_selector"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/loginButtonLogin"
            android:textAllCaps="false"
            android:textSize="20sp"/>



        <TextView
            android:id="@+id/loginNoAccount"
            style="@style/textData"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="25dp"
            android:layout_weight="2"
            android:text="@string/loginAccount" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/registerButtonsLayout"
        style="@style/FontBGColor.White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:measureWithLargestChild="false"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonLoginRegister"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/loginButtonRegister"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/buttonLoginFacebook"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="#3B5998"
            android:text="@string/loginButtonFacebook"
            android:textAllCaps="false"
            android:textColor="#ffffff" />

    </LinearLayout>



</RelativeLayout>
